[package]
name = "TCPstack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1.2"
etherparse = "0.10.1"
smoltcp = "0.8.0"
tokio-tun = "0.5.3"
tokio = { version = "1.18", features = ["full"] }
futures = "0.3"
bitflags = "1.0"
nix = "0.13"

